fix: add spacing between profile picture and social icons (#37354)
* fix: add spacing between profile picture and social icons

* add additional spacing and move code to correct file

--- a/client/src/components/profile/components/social-icons.css
+++ b/client/src/components/profile/components/social-icons.css
@@ -1,7 +1,11 @@
+.social-media-icons {
+  margin-top: 1.5em;
+}
+
 .social-media-icons > a {
-  margin: 0 10px 0 0;
+  margin: 0 1.5em 0 0;
 }
 
 .social-media-icons > a:last-child {
-  margin: 0;
+  margin: 0 0 1.5em 0;
 }
